added dependecies and changes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=mongodb+srv://luisrdz:varona@heroes.u88x7rq.mongodb.net/
+PORT=8000
+DATABASE_URL=mongodb+srv://luisrdz:varona@heroes.u88x7rq.mongodb.net/Heroes
