--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest"
   }
 }
