--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "mongoose": "^8.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "dev": "nodemon index.js",
